--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+# 我的开发环境和配置文件
+
+## vim
+
+ln -s `pwd`/vimrc $HOME/.vimrc
+
 安装 snipMate
 $ git clone git://github.com/msanders/snipmate.vim.git
 $ cd snipmate.vim
@@ -7,3 +13,7 @@ $ cp -R * ~/.vim
 $ git clone http://github.com/mattn/zencoding-vim.git
 $ cp zencoding-vim/plugin/zencoding.vim ~/.vim/plugin/
 $ cp zencoding-vim/autoload/zencoding.vim ~/.vim/autoload/
+
+## git
+
+ln -s `pwd`/gitconfig $HOME/.gitconfig
